--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-Hello, world! (waves baby arms)
+Work-in-progress socks pattern…
+
+### Todo
+
+* make the socks branch the master
+* turn this into gh-pages
+* link to the gh-pages in description
+* tidy and make it something like a starting point for others
+* think of a way (this is complex) to generate a Tangle-enabled page from a .txt pattern
